# BreakpadAndroid

./: .gitmodules  README.md  dump_sym_for_breakpad.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/app/android/breakpad/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/app/android/breakpad/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/app/android/breakpad/: ExampleUnitTest.java
breakpad/: build.gradle
breakpad/src/main/: AndroidManifest.xml
breakpad/src/main/cpp/: gen_headers.sh
gradle/wrapper/: gradle-wrapper.properties
